syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.localhost.customer";
option java_outer_classname = "CustomerClient";
option objc_class_prefix = "HLW";

package com.localhost.customer;

service CustomerClientService {
  rpc CreateCustomer (CustomerCreateRequest) returns (CustomerCreateReply) {}
  
  rpc FetchCustomer (CustomerFetchRequest) returns (CustomerFetchReply) {}
}

message CustomerCreateRequest {
  	string first_name = 1;       // Corresponds to String firstName
    string last_name = 2;        // Corresponds to String lastName
    string phone_number = 3;     // Corresponds to String phoneNumber
    string email = 4;            // Corresponds to String email
    string user_id = 5;  		 // Corresponds to String email	
}

message CustomerCreateReply {
   string first_name = 1;       // Corresponds to String firstName
    string last_name = 2;        // Corresponds to String lastName
    string phone_number = 3;     // Corresponds to String phoneNumber
    string email = 4;            // Corresponds to String email
    string user_id = 5;  		 // Corresponds to String email	
}

message CustomerFetchRequest {
	oneof identifier {
	    string phone_number = 3;     // Corresponds to String phoneNumber
	    string email = 4;            // Corresponds to String email
	    string user_id = 5;  		 // Corresponds to String email
	}	
}

message Customer {
    string first_name = 1;       // Corresponds to String firstName
    string last_name = 2;        // Corresponds to String lastName
    string phone_number = 3;     // Corresponds to String phoneNumber
    string email = 4;            // Corresponds to String email
    string user_id = 5;  		 // Corresponds to String email	
}

message CustomerFetchReply {
    repeated Customer customers = 1; // list of customers
}
